fix run.sh, add Readme